// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.delegatedetails;

option java_multiple_files = true;
option go_package = "920_delegate_service_beans";

import "955-delegate-beans/src/main/proto/io/harness/delegate/account.proto";
import "920-delegate-service-beans/src/main/proto/io/harness/owner/owner.proto";

service DelegateDetailsService {
  rpc GetDelegateCount(DelegateCountRequest) returns (DelegateCountResponse);
}

message DelegateCountRequest {
  DelegateDetailsDescriptor delegate_descriptor = 1;
}

message DelegateDetailsDescriptor {
  delegate.AccountId account_id = 1;
  owner.OrgIdentifier org_id = 2;
  owner.ProjectIdentifier project_id = 3;
}

message DelegateCountResponse {
  int64 delegateCount = 1;
}
